# SparierOS

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  memory.rs  panic.rs  runtime.rs  synchronization.rs  syscall.rs
src/_arch/riscv64gc/: boot.S  boot.rs  traps.S  traps.rs
src/bsp/: device_driver.rs  virt.rs
src/bsp/device_driver/: uart16550.rs
src/bsp/virt/: console.rs  driver.rs  link.ld  memory.rs
